--- a/DementiaHelper/SignalR_Server/Index.html
+++ b/DementiaHelper/SignalR_Server/Index.html
@@ -21,7 +21,8 @@
 
 <script src="Scripts/jquery-3.1.1.js"></script>
 <script src="Scripts/jquery.signalR-2.2.1.min.js"></script>
-    <script src="/signalr/hubs"></script>
+<script src="/signalr/hubs"></script>
+
 <script type="text/javascript">
     $(function() {
         var chat = $.connection.chatHub;
@@ -37,7 +38,7 @@
 
         $.connection.hub.start().done(function() {
             $('#sendmessage').click(function() {
-                chat.server.send($('#displayname').val(), $('#message').val());
+                chat.server.singleChat($('#displayname').val(), $('#message').val());
 
                 $('#message').val('').focus();
             });
