--- a/DementiaHelper/SignalR_Server/Index.html
+++ b/DementiaHelper/SignalR_Server/Index.html
@@ -15,8 +15,9 @@
 <div class="container">
     <input type="text" id="message"/>
     <input type="button" id="sendmessage" value="Send"/>
+    <input type="hidden" id="groupId"/>
     <input type="hidden" id="displayname"/>
-    <input type="hidden" id="groupId" value="5"/>
+    
     <ul id="discussion"></ul>
 </div>
 
@@ -35,6 +36,7 @@
         };
 
         $('#displayname').val(prompt('Enter your name:', ''));
+        $('#groupId').val(prompt('Enter a group number:', ''));
         $('#message').focus();
 
         
@@ -42,6 +44,8 @@
         $.connection.hub.start().done(function() {
             $('#sendmessage').click(function () {
                 chat.server.groupChat($('#displayname').val(), $('#message').val(), $('#groupId').val());
+
+                console.log($('#groupId').val());
                 $('#message').val('').focus();
             });
         });
